--- a/plugin.video.adrxbmctv/changelog.txt
+++ b/plugin.video.adrxbmctv/changelog.txt
@@ -1,50 +1,2 @@
-﻿[B]Version 0.1.0 (22/02/2015):[/B]
-Multiple fixes;
-
-[B]Version 0.0.9 (27/01/2015):[/B]
-Multiple fixes;
-New addon structure.
-Added Hqq.tv resolver
-
-[B]Version 0.0.8 (16/01/2015):[/B]
-Added new channels.
-Some videos requires "Abelhas.pt" addon.
-Added XVideos.
-Multiple fixes
-
-[B]Version 0.0.7 (15/12/2014):[/B]
-Added new channels.
-Some streams requires p2p-streams addon.
-Added new sources: Megatube, Alfabass, Torrent-TV.
-Multiple improvements.
-
-[B]Version 0.0.6 (02/12/2014):[/B]
-Added ero-tik.com videos
-Added videomega resolver
-Minor improvements
-
-[B]Version 0.0.5 (25/11/2014):[/B]
-Added 3 channels: Bluebird, Hot, Star
-Added new resolver (firestorm media)
-Fixed powvideo.net resolver
-Other improvements
-
-[B]Version 0.0.4 (18/11/2014):[/B]
-Added magazine section
-Added mips.tv resolver
-Minor improvements
--This version requires PDF Reader addon.
-
-[B]Version 0.0.3 (12/11/2014):[/B]
-Added 3 channels: Redlight Premium, SCT, Hot.
-Added new source: abcast.biz
-Fixed some channels.
-
-[B]Version 0.0.2 (08/11/2014):[/B]
--Fixed option to set best quality
--Player now starts automatically when only 1 resolver available
--Added new resolver (powvideo.net)
--Added option to enable/disable channels in settings
-
-[B]Version 0.0.1 (06/11/2014):[/B]
--Initial release
+﻿[B]Version 0.0.2 (04/05/2015):[/B]
+Add New Images;
