--- a/plugin.audio.googlemusic/resources/language/English/strings.xml
+++ b/plugin.audio.googlemusic/resources/language/English/strings.xml
@@ -10,6 +10,8 @@
     <string id="30064">SQLite database</string>
     <string id="30065">Override View</string>
     <string id="30066">Pre-fetch URL</string>
+    <string id="30052">Export Path</string>
+    <string id="30053">Always export after library update</string>
 
     <!-- auto update -->
     <string id="30067">Auto Update Library</string>
@@ -25,7 +27,7 @@
     <string id="30075">Low</string>
 
     <!-- menu items -->
-    <string id="30201">All songs</string>
+    <string id="30201">All Songs</string>
     <string id="30202">Playlists</string>
     <string id="30203">Instant Mixes</string>
     <string id="30204">Auto Playlists</string>
@@ -35,6 +37,14 @@
     <string id="30208">Search</string>
     <string id="30209">My Library</string>
     <string id="30210">Shuffle My Library</string>
+    <string id="30211">I'm feeling luck mix</string>
+    <string id="30212">Composers</string>
+    <string id="30213">Songs</string>
+    <string id="30214">Shuffle Albums</string>
+    <string id="30215">Thumbs up</string>
+    <string id="30216">Last added</string>
+    <string id="30217">Free and purchased</string>
+    <string id="30218">Most played</string>
 
     <!-- context menu items -->
     <string id="30301">Play all</string>
@@ -43,8 +53,30 @@
     <string id="30304">Update playlists</string>
     <string id="30305">Update library</string>
     <string id="30306">Add to favourites</string>
+    <string id="30307">Add to playlist</string>
+    <string id="30308">Remove from playlist</string>
+    <string id="30309">Add to library</string>
+    <string id="30310">Start Radio</string>
+    <string id="30311">Search in Youtube</string>
+    <string id="30312">Play all in Youtube</string>
+    <string id="30313">Play in Youtube</string>
+    <string id="30314">Export</string>
 
     <!-- messages -->
     <string id="30101">Login failed</string>
-    <string id="30102">Invalid credentials</string>
+    <string id="30102">Invalid credentials or connectivity problems</string>
+    <string id="30103">Library update needed</string>
+    <string id="30104">All Access track not playable</string>
+    <string id="30105">Loading Library</string>
+    <string id="30106">Cache in use - try later</string>
+    <string id="30107">Export completed</string>
+    <string id="30108">Export path not defined</string>
+    <string id="30109">Error calling Youtube Addon</string>
+
+    <!-- dialogs -->
+    <string id="30401">Add to Playlist...</string>
+    <string id="30402">Radio Name</string>
+    <string id="30403">Exporting Library</string>
+    <string id="30404">Please wait</string>
+
 </strings>
